<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/floor"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/floor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/position"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/position"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/floor"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        tools:ignore="RtlHardcoded"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/dw"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/d_w"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/position"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />


    <TextView
        android:id="@+id/typeOfM"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/type_of_m"
        android:minLines="2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/dw"
        android:layout_toEndOf="@+id/dw"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/specialWord"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minLines="2"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/typeOfM"
        android:layout_toRightOf="@+id/typeOfM"
        android:ellipsize="end"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/specialword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/totalPrices"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/total_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/specialWord"
        android:layout_toEndOf="@+id/specialWord"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

</RelativeLayout>