<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/quatationDate"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/quatation_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/quatationNo"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/no"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/quatationDate"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        tools:ignore="RtlHardcoded"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/projectName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/project_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/quatationNo"
        android:gravity="center_vertical|left"
        tools:ignore="RtlHardcoded"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>


    <TextView
        android:id="@+id/customerName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/customer_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/projectName"
        android:gravity="center_vertical|left"
        tools:ignore="RtlHardcoded"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/total_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/customerName"
        android:gravity="center"
        tools:ignore="RtlHardcoded"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>



</RelativeLayout>