<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="vrpro.vrpro.activity.SetProfileActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="username :"
        android:id="@+id/textView1"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="300dp"
        android:gravity="center_vertical|left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="จิราภัสร์ จิรเดชวิโรจน์"
        android:id="@+id/viewUsername"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical|left"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toEndOf="@+id/textView1"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="300dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="phone :"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical|left"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="300dp"
        android:layout_toRightOf="@+id/viewUsername"
        android:layout_toEndOf="@+id/viewUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="081-345-1515"
        android:id="@+id/viewPhoneNumber"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical|left"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="300dp"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="quatation :"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical|left"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="300dp"
        android:layout_toRightOf="@+id/viewPhoneNumber"
        android:layout_toEndOf="@+id/viewPhoneNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="60#0-VR1043"
        android:id="@+id/viewQuatationNo"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical|left"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="300dp"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/txtsaleName"
        android:hint="@string/salename"
        android:padding="10dp"
        android:background="@drawable/selector_boarder_2"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:id="@+id/txtphoneNumber"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/selector_boarder_2"
        android:layout_below="@+id/txtsaleName"
        android:layout_alignLeft="@+id/txtsaleName"
        android:layout_alignStart="@+id/txtsaleName"
        android:layout_alignRight="@+id/txtsaleName"
        android:layout_alignEnd="@+id/txtsaleName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="quatation"
        android:id="@+id/txtSetQuatationNo"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/selector_boarder_2"
        android:layout_below="@+id/txtphoneNumber"
        android:layout_alignLeft="@+id/txtsaleName"
        android:layout_alignStart="@+id/txtsaleName"
        android:layout_alignRight="@+id/txtsaleName"
        android:layout_alignEnd="@+id/txtsaleName" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmit"
        android:layout_marginTop="50dp"
        android:onClick="submit"
        android:layout_below="@+id/txtSetQuatationNo"
        android:layout_centerHorizontal="true" />



</RelativeLayout>

